[package]
name = "philiprehberger-rate-limiter"
version = "0.2.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Token bucket, sliding window, and fixed window rate limiting"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-rate-limiter"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-rate-limiter"
keywords = ["rate-limit", "throttle", "token-bucket", "api", "middleware"]
categories = ["algorithms", "web-programming"]
